<resources>
    <string name="app_name">Servicars</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_Inicio">Inicio</string>
    <string name="title_nuevaOrden">Nueva Orden</string>
    <string name="title_presupuesto">Presupuesto</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="peticion_usuario">Usuario</string>
    <string name="peticion_contraseña">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="peticion_nombre_cliente">Nombre del cliente</string>
    <string name="peticion_identificacion_cliente">ID cliente</string>
    <string name="peticion_telefono_cliente">Telefono</string>
    <string name="peticion_correo_cliente">Correo electronico</string>
    <string name="seccion_datos_auto">Datos automovil</string>
    <string name="peticion_marca_auto">Marca del vehiculo</string>
    <string name="peticion_modelo_vehiculo">Modelo del vehiculo</string>
    <string name="peticion_año_vehiculo">Año del vehiculo</string>
    <string name="peticion_matricula_vehiculo">Matricula del vehiculo</string>
    <string name="peticion_falla_vehiculo">Fallas o problemas que presenta el vehiculo</string>
    <string name="guardar_datos">Guardar datos</string>
    <string name="cancelar">Cancelar</string>
    <string name="columna_auto">Auto</string>
    <string name="columna_cliente">Cliente</string>
    <string name="columna_matricula">Matricula</string>
    <string name="columna_fecha">Fecha de ingreso</string>
    <string name="columna_estado">Estado</string>
    <string name="columna_fecha_transaccion">Fecha transaccion</string>
    <string name="columna_monto">Monto</string>
    <string name="order_vista_detallada">Vista detallada</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="columna_falla">Falla del vehiculo</string>
    <string name="columna_id_cliente">ID Cliente</string>
    <string name="columna_telefono_cliente">Telefono</string>
    <string name="columna_correo_cliente">Correo</string>
    <string name="boton_registrar">Registrar</string>
    <string name="editar_datos">Editar</string>
    <string name="peticion_monto">Monto</string>
    <string name="boton_nueva_cotizacion">Nueva cotizacion</string>
    <string name="columna_descripcion_quote">Descripcion</string>
</resources>