<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/order_vista_detallada"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="25dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/clienteTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/columna_cliente"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/clienteTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/idClienteTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/columna_id_cliente"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/idClienteTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/telefonoClienteTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/columna_telefono_cliente"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/telfonoClienteTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/correoClienteTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/columna_correo_cliente"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/correoClienteTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/autoTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/columna_auto"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/autoTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/matriculaTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/columna_matricula"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/matriculaTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/fechaIngresoTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/columna_fecha"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fechaIngresoTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/estadoTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/columna_estado"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/estadoTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/fallaAutoTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/columna_falla"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fallaAutoTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="TextView" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>