<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.dashboard.DashboardFragment"
        android:orientation="vertical">


        <TextView
            android:id="@+id/text_dashboard"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/NombreClienteInputLayout"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_dashboard">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nombreClienteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/peticion_nombre_cliente"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/IDClienteInputLayout"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NombreClienteInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idClienteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/peticion_identificacion_cliente"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/telefonoClienteInputLayout"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/IDClienteInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/telefonoClienteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/peticion_telefono_cliente"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/correoClienteInputLayout"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telefonoClienteInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/correoClienteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/peticion_correo_cliente"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_datosAuto"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="30dp"
            android:text="@string/seccion_datos_auto"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/correoClienteInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/marcaAutoInputLayout"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_datosAuto">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/marcaAutoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/peticion_marca_auto"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/modeloAutoInputLayout"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/marcaAutoInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/modeloAutoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/peticion_modelo_vehiculo"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/anioAutoInputLayout"
            android:layout_width="326dp"
            android:layout_height="match_parent"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/anioAutoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/peticion_año_vehiculo"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/matriculaAutoInputLayout"
            android:layout_width="326dp"
            android:layout_height="match_parent"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/matriculaAutoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/peticion_matricula_vehiculo"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fallaAutoInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="326dp"
            android:layout_height="match_parent"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fallaAutoEditText"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:hint="@string/peticion_falla_vehiculo"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/guardarBtn"
            android:layout_width="326dp"
            android:layout_height="50dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:text="@string/guardar_datos" />

        <Button
            android:id="@+id/cancelarBtn"
            android:layout_width="326dp"
            android:layout_height="50dp"
            android:layout_marginStart="35dp"

            android:layout_marginBottom="70dp"
            android:text="@string/cancelar" />

    </LinearLayout>

</ScrollView>