<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.dashboard.DashboardFragment">

        <TextView
            android:id="@+id/text_quote"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="25dp"
            android:text="Agregar cotizacion"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/marcaAutoInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_datosAuto">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/marcaAutoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/peticion_marca_auto"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/modeloAutoInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/marcaAutoInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/modeloAutoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/peticion_modelo_vehiculo"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/anioAutoInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="326dp"
            android:layout_height="match_parent"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/anioAutoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/peticion_año_vehiculo"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/matriculaAutoInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="326dp"
            android:layout_height="match_parent"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/matriculaAutoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/peticion_matricula_vehiculo"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/montoInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="326dp"
            android:layout_height="match_parent"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/montoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/peticion_monto"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinnerEstadoCotizacion"
            style="@android:style/Widget.Material.Spinner.Underlined"
            android:layout_width="326dp"
            android:layout_height="match_parent"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/detalleCotizacioInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="326dp"
            android:layout_height="match_parent"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/detalleCotizacionEditText"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:hint="@string/peticion_falla_vehiculo"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/guardarBtn"
            android:layout_width="326dp"
            android:layout_height="50dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="25dp"
            android:text="@string/guardar_datos" />

        <Button
            android:id="@+id/cancelarBtn"
            android:layout_width="326dp"
            android:layout_height="50dp"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="16dp"
            android:text="@string/cancelar" />
    </LinearLayout>

</ScrollView>