<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/vehiculoTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="@string/columna_auto"
                    android:textAlignment="textStart"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/vehiculoTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/matriculaTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="@string/columna_matricula"
                    android:textAlignment="textStart"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/matriculaTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/fechaTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="@string/columna_fecha"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fechaTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/estadoQuoteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="@string/columna_estado"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/estadoQuoteTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/montoQuoteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="@string/columna_monto"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/montoQuoteTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/descripcionQuoteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="@string/columna_descripcion_quote"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/descripcionQuoteTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />
            </TableRow>

        </TableLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>